--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Used for testing programs
+test
+usage.txt
+
+#Binary
+exeggutor
